--- a/Backend_new/config/config.env
+++ b/Backend_new/config/config.env
@@ -2,7 +2,7 @@ PORT = 4000
 
 MONGO_URL = mongodb+srv://chahatrajput5585:m4iIlhmHL9a3Hc2h@cluster0.mjnclti.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 
-FRONTEND_URL = https://jazzy-salamander-48bd97.netlify.app/
+FRONTEND_URL = https://celadon-nougat-89a246.netlify.app
 
 JWT_SECRET_KEY = bO7ElGE70z2gNaJvh2dckVKvKZw
 
